# rust-workouts

./: .gitignore  Cargo.toml  README.md  build.rs  create-image
.github/workflows/: ci.yml
data/: 1-1-LBA.yml  1-2-UBA.yml  1-3-LBA.yml  1-4-UBA.yml  2-1-LBA.yml  2-2-UBA.yml  2-3-LBA.yml  2-4-UBA.yml  3-1-LBA.yml  3-2-UBA.md  3-2-UBA.yml  3-3-LBA.md  3-3-LBA.yml  3-4-UBA.md  3-4-UBA.yml  3-4-UMA.yml  Workout 1.1 Lower Body and Abs.yml  Workout 1.2 Upper Body and Abs.yml  Workout 1.3 Lower Body and Abs.yml  Workout 1.4 Upper Body and Abs.yml  Workout 2.1 Lower Body and Abs.yml  Workout 2.2 Upper Body and Abs.yml  Workout 2.3 Lower Body and Abs.yml  Workout 2.4 Upper Body and Abs.yml  Workout 3.1 Lower Body and Abs.yml  Workout 3.2 Upper Body and Abs.yml  Workout 3.3 Lower Body and Abs.yml  Workout 3.4 Upper Body and Abs.yml
import/: example.yml
src/: main.rs
src/lib/: enums.rs  locked_u_int.rs  mod.rs  screen.rs  screens.rs  screens_plus.rs  util.rs  workout.rs
src/lib/menu/: action.rs  item.rs  mod.rs
src/lib/workout/: enums.rs  exercise.rs  mod.rs  timer.rs  workout_list.rs
src/lib/workout/workout_plus/: mod.rs
src/lib/workout_plus/: exercise.rs  mod.rs  workout_list.rs
workout-paths/: Cargo.toml
workout-paths/src/: lib.rs
