[package]
name = "workout"
version = "0.1.0"
authors = ["Jim Hessin<jhessin@gmail.com>"]
edition = "2018"
description = "A basic workout app for doing HIIT Cardio."
repository = "https://github.com/jhessin/rust-workouts/"
license = "CC-BY-SA-4.0"
keywords = ["terminal", "exercise", "health"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rusty_audio = "1.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
terminal-menu = "2.0.0"
termion = "1.5.6"

[features]
